fix(blazorui): resolve issues of class/style demo of BitMenuButton and BitDropdown on iOS #8425 (#8426)

--- a/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Buttons/MenuButton/BitMenuButtonDemo.razor.scss
+++ b/src/BlazorUI/Demo/Client/Bit.BlazorUI.Demo.Client.Core/Pages/Components/Buttons/MenuButton/BitMenuButtonDemo.razor.scss
@@ -48,6 +48,7 @@
         backdrop-filter: blur(20px);
         background-color: transparent;
         box-shadow: darkgray 0 0 0.5rem;
+        -webkit-backdrop-filter: blur(20px);
     }
 
     .custom-item-button {
